--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -134,6 +134,10 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="life_base_btn_shadow" parent="@style/life_base_btn" >
+        <item name="android:background">@drawable/shape_yellow5_life_shadow</item>
+    </style>
     <style name="life_btn_shape50_yellow_deep" >
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
