--- a/app/src/main/res/layout/header_service_list.xml
+++ b/app/src/main/res/layout/header_service_list.xml
@@ -56,6 +56,7 @@
 
 
     <com.cinderellavip.weight.ScaleImageView
+        android:id="@+id/iv_buy_long_service"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
