--- a/app/src/main/res/layout/item_direct_comment.xml
+++ b/app/src/main/res/layout/item_direct_comment.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/ll_root"
+    android:background="@drawable/touch_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <LinearLayout
