生活服务全部UI

--- a/app/src/main/res/layout/activity_longservice_order_detail.xml
+++ b/app/src/main/res/layout/activity_longservice_order_detail.xml
@@ -335,6 +335,7 @@
                     android:textColor="@color/black"
                     />
                 <TextView
+                    android:id="@+id/tv_cost_explain"
                     style="@style/base_text_style"
                     android:text="订单说明"
                     android:padding="12dp"
