--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -104,7 +104,7 @@
                 android:paddingBottom="6dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
-                android:text="客服"/>
+                android:text="购物车"/>
             <TextView
                 android:id="@+id/tv_shop"
                 android:layout_width="wrap_content"
