--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -147,36 +147,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            style="@style/click_toolbar_style"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
             android:src="@mipmap/agreement_selete_no"/>
         <TextView
             style="@style/base_text_style"
+            android:textSize="12sp"
             android:text="我已阅读并同意"/>
 
         <TextView
             android:id="@+id/tv_register_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            style="@style/click_toolbar_style"
+            android:textSize="12sp"
             android:textColor="@color/baseColor"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="《用户协议》"/>
 
         <TextView
             style="@style/base_text_style"
+            android:textSize="12sp"
             android:text="和"/>
 
         <TextView
             android:id="@+id/tv_privacy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            style="@style/click_toolbar_style"
+            android:textSize="12sp"
             android:textColor="@color/baseColor"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="《隐私条款》"/>
 
 
