--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center"
-        android:layout_margin="12dp"
+        android:layout_margin="20dp"
         android:drawableLeft="@mipmap/icon_switch"
         android:drawablePadding="3dp"
         android:padding="12dp"
@@ -148,7 +148,7 @@
             android:text="微信登录"
             android:drawablePadding="5dp"
             android:textSize="12sp"
-            android:drawableTop="@mipmap/icon_wechat"/>
+            android:drawableTop="@mipmap/icon_wechat_login"/>
 
         <TextView
             android:id="@+id/tv_aLiPay_login"
@@ -156,11 +156,11 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black_title_color"
             style="@style/base_text_style"
-            android:text="支付宝支付"
+            android:text="支付宝登陆"
             android:layout_marginLeft="50dp"
             android:drawablePadding="5dp"
             android:textSize="12sp"
-            android:drawableTop="@mipmap/icon_alipay"/>
+            android:drawableTop="@mipmap/icon_alipay_login"/>
 
     </LinearLayout>
 
