--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -11,14 +11,15 @@
         android:layout_height="wrap_content"
         android:background="@mipmap/home_bg"
         android:orientation="vertical">
-        <View
+        <com.cinderellavip.weight.StatusBarHeightView
+            android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="@dimen/statusbar_view_height"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -29,7 +30,7 @@
                 android:background="@drawable/shape_white50"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="12dp"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="6dp"
                 >
 
@@ -54,6 +55,7 @@
             <ImageView
                 android:id="@+id/iv_category"
                 android:padding="5dp"
+                android:layout_marginTop="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/click_toolbar_style"
