--- a/app/src/main/res/layout/tab_item_home_goods.xml
+++ b/app/src/main/res/layout/tab_item_home_goods.xml
@@ -18,6 +18,7 @@
             android:paddingBottom="3dp"
             android:paddingTop="3dp"
             android:text="首页"
+            android:textStyle="bold"
             android:textColor="@color/black_title_color"
             android:textSize="14sp"/>
 
