--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,21 @@
         <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
     </style>
 
+
+    <style name="WelComeTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="colorPrimary">@color/baseColor</item>
+        <item name="colorPrimaryDark">@color/baseColor</item>
+        <item name="colorAccent">@color/baseColor</item>
+        <item name="android:windowAnimationStyle">@style/Animation_Activity</item>
+        <item name="android:windowBackground">@mipmap/splash</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="title_text_Style" parent="base_text_style">
     </style>
 
