--- a/app/src/main/res/layout/activity_home_category.xml
+++ b/app/src/main/res/layout/activity_home_category.xml
@@ -11,10 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/statusbar_view_height"
-            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,7 +64,7 @@
 
     </LinearLayout>
   <FrameLayout
-      android:id="@+id/content_container"
+      android:id="@+id/content_container1"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 
