--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -35,12 +35,11 @@
 
 
             <RelativeLayout
-                android:id="@+id/rv_cart"
                 style="@style/click_toolbar_style"
                 android:layout_width="50dp"
                 android:layout_height="40dp">
                 <ImageView
-                    android:id="@+id/iv_cart"
+                    android:id="@+id/tv_service"
                     android:layout_centerInParent="true"
                     android:layout_alignParentBottom="true"
                     android:layout_height="match_parent"
@@ -91,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp">
             <TextView
-                android:id="@+id/tv_service"
+                android:id="@+id/rv_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
@@ -179,7 +178,7 @@
                     android:layout_width="wrap_content"
                     android:textColor="@color/white"
                     android:layout_height="wrap_content"
-                    android:text="单独购买"
+                    android:text="参团购买"
                     android:textSize="12sp"
                     />
 
