--- a/app/src/main/res/layout/item_detail_video.xml
+++ b/app/src/main/res/layout/item_detail_video.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/video"
-    android:src="@mipmap/demo_product_banner"
-    />
+
+    >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/demo_product_banner"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/video"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/paly_red"
+        />
+</RelativeLayout>
+
 
 
 
