--- a/app/src/main/res/layout/pop_bottom_specification.xml
+++ b/app/src/main/res/layout/pop_bottom_specification.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/shape_white_top10"
     android:orientation="vertical">
 
@@ -13,7 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="商品详情"
+            android:text="商品信息"
             android:textSize="14sp"
             android:layout_centerVertical="true"
             android:textColor="@color/black_title_color"
@@ -81,13 +82,17 @@
         android:layout_marginTop="30dp"
         />
 
-    <com.cinderellavip.weight.FlowLayout
-        android:id="@+id/fl_special"
+    <com.nex3z.flowlayout.FlowLayout
+        android:id="@+id/fl_flag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp">
-
-    </com.cinderellavip.weight.FlowLayout>
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
+        app:flChildSpacing="8dp"
+        app:flChildSpacingForLastRow="8dp"
+        app:flRowSpacing="8dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,41 +107,10 @@
             android:text="数量"
             android:layout_weight="1"
             />
-        <LinearLayout
-            android:layout_width="90dp"
-            android:layout_height="25dp"
-            android:orientation="horizontal"
-            android:background="@drawable/shape_gray50">
-
-            <ImageView
-                android:id="@+id/iv_reduce"
-                android:layout_width="30dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/cart_reduce"/>
-
-            <TextView
-                android:id="@+id/tv_number"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:text="1"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/black_title_color"/>
-
-
-            <ImageView
-                android:id="@+id/iv_add"
-                android:layout_width="30dp"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/cart_add"/>
-        </LinearLayout>
+        <com.cinderellavip.weight.CartNumberView
+            android:id="@+id/cart_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
     <TextView
