--- a/app/src/main/res/layout/fragment_find_topic_detail.xml
+++ b/app/src/main/res/layout/fragment_find_topic_detail.xml
@@ -104,6 +104,7 @@
                         android:layout_marginLeft="12dp"
                         android:layout_marginRight="12dp"
                         android:layout_marginBottom="12dp"
+                        android:textSize="12sp"
                         />
 
                     <View
