--- a/app/src/main/res/layout/header_empty_view_for_cart.xml
+++ b/app/src/main/res/layout/header_empty_view_for_cart.xml
@@ -49,7 +49,7 @@
         android:layout_height="match_parent"/>
 
     <TextView
-        android:text="推荐商品"
+        android:text="猜你喜欢"
         android:padding="12dp"
         style="@style/base_text_style"
         />
