--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -8,8 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="12dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
         android:paddingRight="12dp"
         android:id="@+id/ll_root"
         android:gravity="center_vertical"
@@ -22,135 +20,34 @@
         android:padding="10dp"
         android:src="@mipmap/gwcmx"/>
 
-    <RelativeLayout
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        >
-        <com.cinderellavip.weight.RoundImageView
-            android:id="@+id/iv_product"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/demo_product_banner"/>
-
-
-    </RelativeLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:layout_height="wrap_content"
-                android:text="农家新语 马丹90红颜奶油草莓3斤 新鲜现摘水果"
-                android:textSize="14sp"
-                android:textColor="@color/black_title_color"/>
-
-
-            <ImageView
-                android:id="@+id/iv_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:padding="12dp"
-                android:src="@mipmap/close"/>
-
-
-
-        </LinearLayout>
-
+            android:padding="10dp"
+            android:src="@mipmap/icon_shop_forcart"/>
 
         <TextView
-            android:id="@+id/tv_specification"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="规格：L"
-            android:textSize="12sp"
-            android:layout_marginTop="3dp"
-            android:textColor="@color/grayText"/>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_price"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="3dp"
-                android:layout_height="wrap_content"
-                android:text="￥90"
-                android:textSize="14sp"
-                android:textColor="@color/baseColor"/>
-
-            <LinearLayout
-                android:layout_width="90dp"
-                android:layout_height="25dp"
-                android:orientation="horizontal"
-                android:background="@drawable/shape_gray50">
-
-                <ImageView
-                    android:id="@+id/iv_reduce"
-                    android:layout_width="30dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/cart_reduce"/>
-
-                <TextView
-                    android:id="@+id/tv_number"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:text="1"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:textColor="@color/black_title_color"/>
-
-
-                <ImageView
-                    android:id="@+id/iv_add"
-                    android:layout_width="30dp"
-                    android:paddingTop="6dp"
-                    android:paddingBottom="6dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@mipmap/cart_add"/>
-            </LinearLayout>
-
-
-
-
-
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
+            android:id="@+id/tv_shop"
+            style="@style/base_text_style"
+            android:text="夺伊服装店"
+            android:padding="10dp"
+            android:drawableRight="@mipmap/right_black_icon"
+            android:drawablePadding="5dp"
+            android:src="@mipmap/icon_shop_forcart"/>
 
 
 </LinearLayout>
 
     <View
         style="@style/line_light"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <View
+        style="@style/base_space"
         />
 </LinearLayout>
