--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -136,22 +136,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:padding="12dp"
                 android:layout_marginTop="8dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
                     >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="12dp"
+                        android:src="@mipmap/icon_shop_forcart"/>
+
+                    <TextView
+                        android:id="@+id/tv_shop"
+                        style="@style/base_text_style"
+                        android:text="夺伊服装店"
+                        android:padding="12dp"
+                        android:drawableRight="@mipmap/right_black_icon"
+                        android:drawablePadding="5dp"
+                        android:src="@mipmap/icon_shop_forcart"/>
 
 
 
                     <TextView
                         style="@style/base_text_style"
                         android:layout_weight="1"
+                        android:gravity="right"
+                        android:layout_marginRight="12dp"
                         android:textSize="12sp"
-                        android:text="商品信息（共计2件）" />
+                        android:text="（共计2件）" />
 
                 </LinearLayout>
 
@@ -315,6 +332,7 @@
                         android:text="订单编号：1234567890" />
 
                     <TextView
+                        android:id="@+id/tv_copy"
                         style="@style/base_btn_style"
                         android:background="@drawable/shape_line_gray50"
                         android:text="复制"
