--- a/app/src/main/res/layout/header_mine.xml
+++ b/app/src/main/res/layout/header_mine.xml
@@ -1051,7 +1051,7 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="@color/black_title_color"
-        android:text="为你推荐"
+        android:text="猜你喜欢"
         android:padding="12dp"
         android:background="@color/gray_bg"
         android:gravity="center"
