--- a/app/src/main/res/layout/item_ensure_order_goods.xml
+++ b/app/src/main/res/layout/item_ensure_order_goods.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <View
-        style="@style/line_light"
-        />
+
     <LinearLayout
         android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -46,9 +42,10 @@
                 android:layout_weight="1"
                 android:maxLines="2"
                 android:ellipsize="end"
+
                 android:layout_height="wrap_content"
                 android:text="MAC 魅可 时尚唇膏 口红 3克小辣椒牛血麻辣鸡丝西柚都是"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:textColor="@color/black_title_color"/>
 
 
@@ -107,7 +104,7 @@
                 android:layout_marginTop="3dp"
                 android:layout_weight="1"
                 android:textColor="@color/black_title_color"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:text="￥90.00" />
 
 
@@ -129,8 +126,13 @@
 
 </LinearLayout>
 
+    <View
+        style="@style/line_light"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        />
+
 </LinearLayout>
 
 
 
-</RelativeLayout>
