--- a/app/src/main/res/layout/item_mine_group_up.xml
+++ b/app/src/main/res/layout/item_mine_group_up.xml
@@ -29,15 +29,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:gravity="center_vertical"
         >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_shop_forcart"/>
+
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_shop"
             style="@style/base_text_style"
+            android:text="夺伊服装店"
+            android:padding="12dp"
+            android:drawableRight="@mipmap/right_black_icon"
+            android:drawablePadding="5dp"
+            android:src="@mipmap/icon_shop_forcart"/>
+
+        <View
+            android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:text="3人团，参团人数不够"/>
+            android:layout_height="0dp"/>
 
         <TextView
             android:id="@+id/tv_status"
