--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.cinderellavip.weight.RecycleViewRootLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:id="@+id/ll_root"
-    android:background="@drawable/touch_bg"
+    android:background="@color/white"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:padding="12dp"
+        android:paddingRight="12dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_title"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="订单编号:1483759861938"
-            android:textSize="14sp"
-            android:textColor="@color/black_title_color"/>
+            android:paddingLeft="12dp"
+            android:src="@mipmap/icon_shop_forcart"/>
+
+        <TextView
+            android:id="@+id/tv_shop"
+            style="@style/base_text_style"
+            android:text="夺伊服装店"
+            android:padding="12dp"
+            android:drawableRight="@mipmap/right_black_icon"
+            android:drawablePadding="5dp"
+            android:src="@mipmap/icon_shop_forcart"/>
         
 
         <View
@@ -89,4 +96,4 @@
 
 
 
-</com.cinderellavip.weight.RecycleViewRootLinearLayout>
+</LinearLayout>
