--- a/app/src/main/res/layout/fragment_goodsdetail.xml
+++ b/app/src/main/res/layout/fragment_goodsdetail.xml
@@ -14,7 +14,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp">
+        android:layout_height="wrap_content">
 
         <include
             layout="@layout/layout_banner_graphic_and_text"/>
