--- a/app/src/main/res/drawable/news_tab_item_bg_select.xml
+++ b/app/src/main/res/drawable/news_tab_item_bg_select.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap android:src="@mipmap/splash"
-            android:gravity="fill_vertical"
+            android:gravity="bottom"
             android:dither="true"
             android:tileMode="disabled"/>
     </item>
