--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -102,7 +102,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="商品总价："
+                android:text="总价："
                 android:textSize="12sp"
                 android:layout_marginLeft="12dp"
                 android:textColor="@color/black_title_color"
@@ -114,7 +114,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                tools:text="￥178"
+                android:text="￥178"
                 android:textSize="14sp"
                 android:textColor="@color/baseColor"
                 android:layout_gravity="center_vertical"
