--- a/app/src/main/res/layout/item_coupon_center.xml
+++ b/app/src/main/res/layout/item_coupon_center.xml
@@ -97,9 +97,10 @@
                 android:paddingTop="3dp"
                 android:layout_gravity="center"
                 android:paddingBottom="3dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
                 android:textSize="12sp"
+                android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
                 android:text="立刻领取"/>
 
