--- a/app/src/main/res/layout/item_ensure_order.xml
+++ b/app/src/main/res/layout/item_ensure_order.xml
@@ -89,9 +89,11 @@
             <TextView
                 style="@style/base_text_style"
                 android:textSize="12sp"
-                android:text="0.00" />
+                android:text="暂无活动"
+                android:textColor="@color/grayText"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/ll_coupon"
             style="@style/base_hor_style"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
@@ -104,11 +106,13 @@
                 android:textSize="12sp"/>
 
             <TextView
+                android:id="@+id/tv_coupon"
                 style="@style/base_text_style"
                 android:textSize="12sp"
-                android:drawableRight="@mipmap/right_black_icon"
                 android:drawablePadding="5dp"
-                android:text="-￥20" />
+                android:text="暂无优惠券"
+                android:drawableRight="@mipmap/right_black_icon"
+                android:textColor="@color/grayText"/>
         </LinearLayout>
         <LinearLayout
             style="@style/base_hor_style"
