--- a/app/src/main/res/layout/view_cart_number.xml
+++ b/app/src/main/res/layout/view_cart_number.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:src="@mipmap/cart_reduce"/>
+                android:src="@mipmap/caer_reduce_unclick"/>
         </RelativeLayout>
 
 
