--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -11,11 +11,11 @@
     <com.cinderellavip.weight.RoundImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="160dp"
         android:layout_marginLeft="@dimen/dimen_20"
         android:layout_marginRight="@dimen/dimen_20"
         android:scaleType="centerCrop"
-        android:src="@mipmap/demo_syba"
+        tools:src="@mipmap/demo_syba"
         />
 
 
