--- a/app/src/main/res/layout/item_home_goods.xml
+++ b/app/src/main/res/layout/item_home_goods.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/shape_white5"
     android:id="@+id/ll_root"
     android:orientation="vertical">
@@ -22,7 +23,7 @@
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
             android:layout_height="0dp"
-            android:src="@mipmap/product"
+            tools:src="@mipmap/product"
             />
 
 
@@ -35,7 +36,7 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="8dp"
@@ -43,7 +44,7 @@
         android:lines="2"
         android:ellipsize="end"
         android:textColor="@color/black_title_color"
-        android:text="冬季婴儿夹棉连体0~3岁宝宝加厚保暖"
+        tools:text="冬季婴儿夹棉连体0~3岁宝宝加厚保暖"
         />
 
 
@@ -56,7 +57,7 @@
         android:maxLines="1"
         android:lines="1"
         android:ellipsize="end"
-        android:text="已拼329件"
+        tools:text="已拼329件"
         android:visibility="gone"
         />
 
@@ -92,11 +93,11 @@
                     android:id="@+id/tv_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/baseColor"
                     android:layout_marginLeft="5dp"
-                    android:text="￥238"/>
+                    tools:text="￥238"/>
 
                 <TextView
                     android:id="@+id/tv_former_price"
@@ -106,7 +107,7 @@
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/grayText"
                     android:layout_marginLeft="5dp"
-                    android:text="￥238"/>
+                    tools:text="￥238"/>
             </LinearLayout>
 
 
