--- a/app/src/main/res/layout/item_home_category.xml
+++ b/app/src/main/res/layout/item_home_category.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     >
 
-    <ImageView
+    <com.cinderellavip.weight.CircleImageView
         android:id="@+id/iv_image"
         android:layout_width="45dp"
         android:layout_height="45dp"
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="超值优惠"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:layout_centerInParent="true"
