--- a/app/src/main/res/layout/fragment_shop_home_goods.xml
+++ b/app/src/main/res/layout/fragment_shop_home_goods.xml
@@ -35,6 +35,7 @@
                     android:orientation="vertical">
 
                     <RelativeLayout
+                        android:id="@+id/rl_banner"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -85,14 +86,14 @@
                         android:id="@+id/scroll_recycler_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp" />
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="12dp"/>
 
                     <RelativeLayout
                         android:id="@+id/rl_indicator"
                         android:layout_width="50dp"
                         android:layout_height="4dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="12dp"
                         android:layout_marginBottom="12dp"
                         android:background="@drawable/shape_gray50">
 
@@ -127,6 +128,7 @@
                             android:layout_marginRight="5dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginBottom="10dp"
+                            android:visibility="gone"
                             />
 
 
@@ -141,6 +143,7 @@
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginBottom="10dp"
+                            android:visibility="gone"
                             />
 
 
