--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:layout_marginBottom="5dp"
     android:orientation="vertical">
@@ -25,7 +25,7 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:layout_height="wrap_content"
-            android:text="休闲食品"
+            tools:text="休闲食品"
             android:textColor="@color/black_title_color"
             android:layout_marginLeft="10dp"
             android:textSize="14sp"/>
