--- a/app/src/main/res/layout/item_filter_second.xml
+++ b/app/src/main/res/layout/item_filter_second.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/rl_root"
+<LinearLayout android:id="@+id/rl_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,19 +7,22 @@
     android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
     android:gravity="center"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
-      <ImageView
+      <com.cinderellavip.weight.CircleImageView
           android:id="@+id/iv_image"
           android:layout_width="45dp"
           android:layout_height="45dp"
-          android:src="@mipmap/home_category1"/>
+          tools:src="@mipmap/home_category1"/>
 
       <TextView
           android:id="@+id/tv_number"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="粽子"
+          tools:text="粽子"
+          android:maxLines="1"
+          android:singleLine="true"
+          android:ellipsize="end"
           android:layout_marginTop="5dp"
           android:gravity="center"
           android:layout_centerInParent="true"
