--- a/app/src/main/res/layout/pop_right_condition.xml
+++ b/app/src/main/res/layout/pop_right_condition.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginLeft="80dp"
     android:background="@color/gray_bg"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
   <TextView
+      android:id="@+id/tv_title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="16sp"
       android:textStyle="bold"
-      android:text="食品生鲜"
+      tools:text="食品生鲜"
       android:padding="12dp"
     />
 
